{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 112,
  "lineage": "85198eac-9ac6-99b4-0c71-371a37d6ff7d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_vm1_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/instanceGroups/ig-vm1-tf",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-06-19T00:17:15.075-07:00",
            "enable_cdn": false,
            "fingerprint": "0Z_hHPXZO_o=",
            "generated_id": 2388202712477940500,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/httpHealthChecks/health-check-vm1-tf"
            ],
            "id": "projects/amplified-asset-426508-e7/global/backendServices/backend-vm1-tf",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": false,
                "sample_rate": 0
              }
            ],
            "name": "backend-vm1-tf",
            "port_name": "http",
            "project": "amplified-asset-426508-e7",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm1-tf",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.health_check_vm1_tf",
            "google_compute_instance.vm1_tf",
            "google_compute_instance_group.ig_vm1_tf",
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_vm2_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/instanceGroups/ig-vm2-tf",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-06-19T00:17:15.362-07:00",
            "enable_cdn": false,
            "fingerprint": "E0kH18JeHc8=",
            "generated_id": 1248066286129199892,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/httpHealthChecks/health-check-vm2-tf"
            ],
            "id": "projects/amplified-asset-426508-e7/global/backendServices/backend-vm2-tf",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": false,
                "sample_rate": 0
              }
            ],
            "name": "backend-vm2-tf",
            "port_name": "http",
            "project": "amplified-asset-426508-e7",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm2-tf",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.health_check_vm2_tf",
            "google_compute_instance.vm2_tf",
            "google_compute_instance_group.ig_vm2_tf",
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-from-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T00:42:19.257-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amplified-asset-426508-e7/global/firewalls/allow-ssh-from-iap",
            "log_config": [],
            "name": "allow-ssh-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
            "priority": 1000,
            "project": "amplified-asset-426508-e7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/firewalls/allow-ssh-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T00:16:44.927-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amplified-asset-426508-e7/global/firewalls/allow-http-tf",
            "log_config": [],
            "name": "allow-http-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
            "priority": 1000,
            "project": "amplified-asset-426508-e7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/firewalls/allow-http-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/amplified-asset-426508-e7/global/forwardingRules/http-forwarding-rule-tf",
            "ip_address": "34.144.228.128",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule-tf",
            "port_range": "80-80",
            "project": "amplified-asset-426508-e7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/forwardingRules/http-forwarding-rule-tf",
            "target": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/targetHttpProxies/http-lb-proxy-tf"
          },
          "dependencies": [
            "google_compute_backend_service.backend_vm1_tf",
            "google_compute_backend_service.backend_vm2_tf",
            "google_compute_http_health_check.health_check_vm1_tf",
            "google_compute_http_health_check.health_check_vm2_tf",
            "google_compute_instance.vm1_tf",
            "google_compute_instance.vm2_tf",
            "google_compute_instance_group.ig_vm1_tf",
            "google_compute_instance_group.ig_vm2_tf",
            "google_compute_network.terraform_network_tf",
            "google_compute_target_http_proxy.http_proxy_tf",
            "google_compute_url_map.url_map_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240611",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/disks/vm1-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/amplified-asset-426508-e7/zones/us-central1-a/instances/vm1-tf",
            "instance_id": "48048218853817137",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "iEcwNR2fgZo=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y apache2\necho \"Hello from Public Server\" \u003e /var/www/html/index.html\nsystemctl restart apache2\n",
            "name": "vm1-tf",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/regions/us-central1/subnetworks/terraform-network-tf",
                "subnetwork_project": "amplified-asset-426508-e7"
              }
            ],
            "project": "amplified-asset-426508-e7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/instances/vm1-tf",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240611",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/disks/vm2-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/amplified-asset-426508-e7/zones/us-central1-a/instances/vm2-tf",
            "instance_id": "8360460587034950449",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "7_379Q6IT38=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y apache2\necho \"Hello from Private Server\" \u003e /var/www/html/index.html\nsystemctl restart apache2\n",
            "name": "vm2-tf",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/regions/us-central1/subnetworks/terraform-network-tf",
                "subnetwork_project": "amplified-asset-426508-e7"
              }
            ],
            "project": "amplified-asset-426508-e7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/zones/us-central1-a/instances/vm2-tf",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform_network_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
            "mtu": 0,
            "name": "terraform-network-tf",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8441741859564239687",
            "project": "amplified-asset-426508-e7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T00:30:30.132-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/amplified-asset-426508-e7/regions/us-central1/routers/nat-router-tf",
            "name": "nat-router-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/networks/terraform-network-tf",
            "project": "amplified-asset-426508-e7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/regions/us-central1/routers/nat-router-tf"
          },
          "dependencies": [
            "google_compute_network.terraform_network_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "amplified-asset-426508-e7/us-central1/nat-router-tf/nat-tf",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-tf",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "amplified-asset-426508-e7",
            "region": "us-central1",
            "router": "nat-router-tf",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.terraform_network_tf",
            "google_compute_router.nat_router_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T00:18:39.686-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/amplified-asset-426508-e7/global/targetHttpProxies/http-lb-proxy-tf",
            "name": "http-lb-proxy-tf",
            "project": "amplified-asset-426508-e7",
            "proxy_bind": false,
            "proxy_id": 5685749066133092512,
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/targetHttpProxies/http-lb-proxy-tf",
            "url_map": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/urlMaps/url-map-tf"
          },
          "dependencies": [
            "google_compute_backend_service.backend_vm1_tf",
            "google_compute_backend_service.backend_vm2_tf",
            "google_compute_http_health_check.health_check_vm1_tf",
            "google_compute_http_health_check.health_check_vm2_tf",
            "google_compute_instance.vm1_tf",
            "google_compute_instance.vm2_tf",
            "google_compute_instance_group.ig_vm1_tf",
            "google_compute_instance_group.ig_vm2_tf",
            "google_compute_network.terraform_network_tf",
            "google_compute_url_map.url_map_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-19T00:18:28.286-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm2-tf",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "15um_7BUmkI=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "path-matcher-tf"
              }
            ],
            "id": "projects/amplified-asset-426508-e7/global/urlMaps/url-map-tf",
            "map_id": 1844281031840970923,
            "name": "url-map-tf",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm2-tf",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "path-matcher-tf",
                "path_rule": [
                  {
                    "paths": [
                      "/public"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm1-tf",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/internal"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/backendServices/backend-vm2-tf",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "amplified-asset-426508-e7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amplified-asset-426508-e7/global/urlMaps/url-map-tf",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_vm1_tf",
            "google_compute_backend_service.backend_vm2_tf"
          ]
        }
      ]
    }
  ]
}